[package]
name = "easy-office"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.9.1"
reqwest = { version = "0.13.2", features = ["json", "form"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde", "formatting"] }
url = "2.5.8"
uuid = { version = "1.23.0", features = ["serde"] }
